# zentubepaster

./: README.md  package.json  pnpm-lock.yaml
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
src/lib/components/ui/: Downloader.svelte
src/routes/: +layout.svelte  listener.svelte  notes.txt
src/routes/url/: +page.svelte
