[package]
name = "zentubepaster"
version = "0.0.1"
description = "Copy any yt-dlp compatible url and it automaticly loads in ZenTubePaster for you to just click download"
authors = ["zenitogr"]
license = ""
repository = ""
default-run = "zentubepaster"
edition = "2021"
rust-version = "1.60"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.5.1", features = [] }

[dependencies]
open = "5.1.2"
tauri = { version = "1.6.1", features = [ "api-all"] }
chientrm-youtube-dl = "0.9.0"
tauri-plugin-clipboard = "0.6.6"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem and the built-in dev server is disabled.
# If you use cargo directly instead of tauri's cli you can use this feature flag to switch between tauri's `dev` and `build` modes.
# DO NOT REMOVE!!
custom-protocol = [ "tauri/custom-protocol" ]
